--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-background-timer": "^2.4.1",
+    "react-native-timer": "^1.3.6",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1"
   },
