--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "expo": "~44.0.0",
+    "expo-splash-screen": "^0.14.2",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -15,8 +16,7 @@
     "react-native-background-timer": "^2.4.1",
     "react-native-timer": "^1.3.6",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1",
-    "expo-splash-screen": "~0.14.1"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
